[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cool Text - EZLoan 382452857513632.png" type="Texture" id=1]
[ext_resource path="res://Cool Text - loan calculator 382452918093914.png" type="Texture" id=2]
[ext_resource path="res://Cool Text - calculate 382453023615345.png" type="Texture" id=3]
[ext_resource path="res://CalculateButton.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ResultsEdit" type="TextEdit" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -392.0
margin_right = 192.0
margin_bottom = -280.0
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToUse" type="TextEdit" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -176.0
margin_right = -205.0
margin_bottom = -40.0
text = "Write the loan amount in dollars ($)
Write the interest rate in percent (%)
Write the number of instalments
Click the \"calculate\" button
Observe results!"
readonly = true
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoanAmount" type="LineEdit" parent="Control"]
margin_left = 136.0
margin_top = 208.0
margin_right = 264.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterestRate" type="LineEdit" parent="Control"]
margin_left = 136.0
margin_top = 248.0
margin_right = 264.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instalments" type="LineEdit" parent="Control"]
margin_left = 136.0
margin_top = 288.0
margin_right = 264.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 32.0
margin_top = 216.0
margin_right = 121.0
margin_bottom = 240.0
text = "Loan Amount:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control"]
margin_left = 480.0
margin_top = 184.0
margin_right = 536.0
margin_bottom = 208.0
text = "Results:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
margin_left = 32.0
margin_top = 256.0
margin_right = 121.0
margin_bottom = 280.0
text = "Interest Rate:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
margin_left = 32.0
margin_top = 296.0
margin_right = 121.0
margin_bottom = 320.0
text = "Instalments:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 352.0
margin_top = 208.0
margin_right = 842.0
margin_bottom = 560.0
focus_mode = 2
bbcode_enabled = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cool Text - EZLoan 382452857513632" type="Sprite" parent="."]
position = Vector2( 520, 48 )
scale = Vector2( 0.787037, 0.787037 )
texture = ExtResource( 1 )

[node name="Cool Text - loan calculator 382452918093914" type="Sprite" parent="."]
position = Vector2( 512, 120 )
scale = Vector2( 0.813559, 0.813559 )
texture = ExtResource( 2 )

[node name="CalculateButton" type="Button" parent="."]
margin_left = 134.0
margin_top = 341.0
margin_right = 270.0
margin_bottom = 365.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cool Text - calculate 382453023615345" type="Sprite" parent="."]
position = Vector2( 198, 349 )
texture = ExtResource( 3 )
[connection signal="pressed" from="CalculateButton" to="CalculateButton" method="_on_CalculateButton_pressed"]
